syntax = "proto3";

package com.phoenix.message.grpc;

import "find_push_task_config_list.proto";

service PushService {
  rpc RpcFindPushTaskConfigList (RpcFindPushTaskConfigListReq) returns (RpcFindPushTaskConfigListResp);
}